--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ typings/
 
 # next.js build output
 .next
+
+# compiled version of your module will be placed here by typescript compiler
+dist 
+
+.DS_Store
+
