--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-pluralize",
+  "name": "demo-pluralize-2",
   "version": "1.0.0",
   "description": "Learning how to publish a simple typescript module to npm. This package  returns the plural form of any noun.",
   "main": "dist/index.js",
